--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,20 @@
 <resources>
     <string name="app_name">Fitness</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_home">Home</string>
+    <string name="action_pause">Pause</string>
     <string name="action_settings">Settings</string>
+    <string name="action_start">Start</string>
+    <string name="action_stop">Stop</string>
 
-    <string name="header_full_name">Full Name</string>
+    <string name="header_active_time">00:00</string>
+    <string name="header_average_pace">0:00/mi</string>
+    <string name="header_burnt_calories">0 cal</string>
+    <string name="header_counted_steps">0 steps</string>
     <string name="header_email">email@example.com</string>
+    <string name="header_full_name">Full Name</string>
+    <string name="header_total_miles">0 mi</string>
+
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
 </resources>
