Add profile activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,14 +7,26 @@
     <string name="action_start">Start</string>
     <string name="action_stop">Stop</string>
 
-    <string name="header_active_time">00:00</string>
-    <string name="header_average_pace">0:00/mi</string>
-    <string name="header_burnt_calories">0 cal</string>
-    <string name="header_counted_steps">0 steps</string>
-    <string name="header_email">email@example.com</string>
-    <string name="header_full_name">Full Name</string>
-    <string name="header_total_miles">0 mi</string>
+    <string name="header_age">Age</string>
+    <string name="header_email">Email</string>
+    <string name="header_name">Name</string>
+    <string name="header_submit">Submit</string>
+    <string name="header_sex">Sex</string>
+    <string name="header_weight">Weight</string>
 
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
+
+    <string name="placeholder_active_time">00:00</string>
+    <string name="placeholder_average_pace">0:00/mi</string>
+    <string name="placeholder_burnt_calories">0 cal</string>
+    <string name="placeholder_counted_steps">0 steps</string>
+    <string name="placeholder_email">email@example.com</string>
+    <string name="placeholder_full_name">Full Name</string>
+    <string name="placeholder_total_miles">0 mi</string>
+
+    <string-array name="sex">
+        <item>Female</item>
+        <item>Male</item>
+    </string-array>
 </resources>
